# colorblind

./: .gitignore  CMakeLists.txt
brief_match/: CMakeLists.txt  anomaly.h  brief_match.cpp  brief_match.hpp
brief_match/imdb/: CMakeLists.txt  imdb.cpp
brief_match/imgpathes/: CMakeLists.txt  imgpathes.cpp
brief_match/include/: imdb.hpp  imgpathes.hpp  photo_match.hpp
brief_match/photo_match/: CMakeLists.txt  photo_match.cpp
brief_match/ut_anomaly/: CMakeLists.txt  main.cpp
brief_match/utests/: assert.h
brief_match/utests/ut_anomaly/: CMakeLists.txt  main.cpp
brief_match/utests/ut_imdb/: CMakeLists.txt  main.cpp
brief_match/utests/ut_imgpathes/: CMakeLists.txt  main.cpp
brief_match/video_processor/: CMakeLists.txt  video_processor.cpp
matcher/: CMakeLists.txt  matcher.cpp
modules/objdetect/src/: cascadedetect.cpp
tools/combiner/: CMakeLists.txt  README.txt  main.cpp
tools/combiner/demo_data/: demo.db
tools/resizer/: CMakeLists.txt  main.cpp
